fix(summaries): text is not truncated
Closes #1050

--- a/src/core/styles/components/grid-summary/_grid-summary-theme.scss
+++ b/src/core/styles/components/grid-summary/_grid-summary-theme.scss
@@ -73,6 +73,7 @@
         border-left: 1px dotted map-get($this, 'border-color');
         flex: 1 1 0%;
         padding: 0 rem(24px);
+        overflow: hidden;
 
         &:first-of-type {
             border-left: 0;
@@ -103,6 +104,7 @@
         padding: rem(5px) 0;
         font-size: rem(12px);
         position: relative;
+        margin-right: rem(3px);
     }
 
     %igx-grid-summary__label {
@@ -136,4 +138,3 @@
         @include ellipsis();
     }
 }
-
